<resources>

    <string-array name="device_entries">
        <item>"PAX S500"</item>
        <item>"PAX S300"</item>
        <item>"PAX A920"</item>
        <item>"PAX D210"</item>
        <item>"Ingenico Desk 3500"</item>
        <item>"Ingenico Desk 2500"</item>
        <item>"Ingenico Tetra"</item>
        <item>"SREDKey"</item>
        <item>"WisePad 2" </item>
        <item>"Miura M010"</item>
    </string-array>

    <string-array name="environments">
        <item>"Certification"</item>
        <item>"Development"</item>
        <item>"Staging"</item>
        <item>"Production"</item>
    </string-array>

    <string name="app_name">SDA_2020_IanCoady_FinalProject</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_screen">Bluefin Payment Systems Login</string>
    <string name="welcom">P2Pe Manager Mobile</string>
    <string name="supports_google_note">This app only supports Google Sign-In.</string>
    <string name="sign_out">Sign Out</string>
    <string name="logo_desc">Company Logo</string>
    <string name="devices_headding">Devices</string>
    <string name="serial_number">Serial Number</string>
    <string name="model_device">Model</string>
    <string name="environment_device">Environment</string>
    <string name="edit">Edit</string>
    <string name="serial_hint">8 Digit Device Serial Number</string>
    <string name="add_device_header">Add Device</string>
    <string name="device_type_header">Device Type</string>
    <string name="dev_env_header">Device Environment Location</string>
    <string name="add_device">Add Device</string>
    <string name="device_activation_date">Device Activation Date:</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit_device_header">Edit Device</string>
    <string name="serial_toast_error">Serial Number incompatible: Try Again</string>
    <string name="dev_exists_error">Device already exists!</string>
    <string name="dev_created">Device created!</string>
    <string name="dev_edited">Device Edited!</string>
    <string name="extras">EXTRA_MESSAGE</string>
    <string name="logout">INIG_LOGOUT</string>
    <string name="failed_login">Login Failed Please Try again.</string>
    <string name="devType">Device Type: %s</string>
    <string name="devEnv">Device Environment: %s</string>
    <string name="devActive">Active Since: %s</string>
    <string name="db_error">Error: Device not logged in database</string>
    <string name="dev_path">Devices</string>
</resources>
