<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:padding="15dp"
    android:id="@+id/listItemLayout">

    <TextView
        android:id="@+id/deviceSN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:text="@string/serial_number"
        android:textAlignment="textStart"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/deviceModel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deviceSN"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/model_device"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/environment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deviceModel"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="5dp"
        android:text="@string/environment_device"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/deviceModel"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="-27dp"
        android:layout_marginEnd="36dp"
        android:text="@string/edit" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="396dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/environment"
        android:layout_marginTop="20dp" />

</RelativeLayout>